Add new templates for user logs, main workspace, and error handling; refactor existing user templates for improved organization and styling

--- a/static/CSS/Objects/logStyles.css
+++ b/static/CSS/Objects/logStyles.css
@@ -49,7 +49,7 @@ main {
     position: fixed;
     right: 0;
     overflow-y: auto;
-    background-image: url(../IMAGES/Escritorio.webp);
+    background-image: url(../../IMAGES/Escritorio.webp);
     background-size: cover;
 }
 
