--- a/static/CSS/Users/homeStyles.css
+++ b/static/CSS/Users/homeStyles.css
@@ -27,7 +27,7 @@ body {
 header {
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../IMAGES/Almacén.webp);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../IMAGES/Almacén.webp);
     background-size: cover;
     position: relative;
 }
