--- a/static/CSS/Users/passwordResetStyles.css
+++ b/static/CSS/Users/passwordResetStyles.css
@@ -14,7 +14,7 @@ body {
     width: 100dvw;
     display: grid;
     place-items: center;
-    background-image: url(../IMAGES/Troncos.webp);
+    background-image: url(../../IMAGES/Troncos.webp);
     background-size: cover;
     font-family: Montserrat;
 }
