--- a/templates/Objects/log.html
+++ b/templates/Objects/log.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/sideBarSmallStyles.css'%}">
-    <link rel="stylesheet" href="{% static 'CSS/logStyles.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/Objects/logStyles.css' %}">
     <title>Historial de Cambios - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Historial Log Inventory">
@@ -17,7 +17,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-   {% include 'Users/sideBar.html' with path='users_log' profile=profile type=type permissions=permissions active_log="active" %}
+   {% include 'sideBar.html' with path='users_log' profile=profile type=type permissions=permissions active_log="active" %}
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
