--- a/templates/Objects/main.html
+++ b/templates/Objects/main.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
-    <link rel="stylesheet" href="{%static '/CSS/mainStyles.css'%}">
+    <link rel="stylesheet" href="{%static '/CSS/Objects/mainStyles.css'%}">
     <title>Work space - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Work space Log Inventory">
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% include 'Users/sideBar.html' with path='main' profile=profile type=type permissions=permissions active_objects="active"%}
+    {% include 'sideBar.html' with path='main' profile=profile type=type permissions=permissions active_objects="active"%}
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
