--- a/templates/Users/profile.html
+++ b/templates/Users/profile.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/sideBarSmallStyles.css'%}">
-    <link rel="stylesheet" href="{%static '/CSS/profileStyles.css'%}">
+    <link rel="stylesheet" href="{%static '/CSS/Users/profileStyles.css'%}">
     <title>Perfil - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Configuración usuario Log Inventory">
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% include 'Users/sideBar.html' with path='profile' profile=profile type=type active_profile="active" %}
+    {% include 'sideBar.html' with path='profile' profile=profile type=type active_profile="active" %}
     <main>
         <div class="filter-bar"> 
             <div class="filter-bar__filter-container">
@@ -86,22 +86,22 @@
             </form>
         </div>
         
-        {% if messages %}
-          <div class="messages-container">
-            {% for message in messages %}
-              <div class="message-{{message.tags}}">
-                  <div class="message-text">
-                    {{ message }}
-                  </div>
-                  <div class="message-close-button" id="message-close-button" role="button" aria-label="Cerrar">
-                    <span class="material-symbols-outlined message-close-button">Close</span>
-                  </div>
-                </div>
-              </div>
-            {% endfor %}
-          </div>
-        {% endif %}
+        
     </main>
+    {% if messages %}
+    <div class="messages-container">
+        {% for message in messages %}
+        <div class="message-{{message.tags}}">
+            <div class="message-text">
+                {{ message }}
+            </div>
+            <div class="message-close-button" id="message-close-button" role="button" aria-label="Cerrar">
+                <span class="material-symbols-outlined message-close-button">Close</span>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
     <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
     <script src="{%static '/SCRIPTS/profileScript.js'%}"></script>
 </body>
