--- a/templates/Users/subusers.html
+++ b/templates/Users/subusers.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
-    <link rel="stylesheet" href="{% static '/CSS/subusersStyles.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/Users/subusersStyles.css' %}">
     <title>Manejo de Usuarios - Log Inventory</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Subusers Log Inventory">
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, nofollow">  
 </head>  
 <body>
-    {% include 'Users/sideBar.html' with path='manage_subusers' profile=profile type=type permissions=permissions active_subusers="active"%}
+    {% include 'sideBar.html' with path='manage_subusers' profile=profile type=type permissions=permissions active_subusers="active"%}
     <main>
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
@@ -76,23 +76,22 @@
                 {% endfor %}
             </table>
         </div>
-        {% if messages %}
-        <div class="messages-container">
-            {% for message in messages %}
-                <div class="message-{{message.tags}}">
-                    <div class="message-text">
-                        {{ message }}
-                    </div>
-                    <div class="message-close-button" id="message-close-button" role="button" aria-label="Cerrar">
-                        <span class="material-symbols-outlined message-close-button">Close</span>
-                    </div>
-                  </div>
-                </div>
-            {% endfor %}
-        </div>
-        {% endif %}
-    </main>
 
+    </main>
+    {% if messages %}
+    <div class="messages-container">
+        {% for message in messages %}
+        <div class="message-{{message.tags}}">
+            <div class="message-text">
+                {{ message }}
+            </div>
+            <div class="message-close-button" id="message-close-button" role="button" aria-label="Cerrar">
+                <span class="material-symbols-outlined message-close-button">Close</span>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
     <script src="{%static '/SCRIPTS/subusersScript.js'%}"></script>
     <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
 </body>
