--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -66,7 +66,7 @@
                 </a>
             </li>
             <li class="sidebar__item">
-                <a href="{% url 'user_log' %}" class="sidebar__item-link {{active_log}}">
+                <a href="{% url 'log' %}" class="sidebar__item-link {{active_log}}">
                     <span class="material-symbols-outlined">event_note</span>
                     <p>Historial</p>
                 </a>
@@ -88,9 +88,9 @@
                 {% if type == 'profile' %}
                 <a href="{% url 'profile' user.username %}" class="item--profile sidebar__item-link {{active_profile}}">
                 {% else %}	
-                <a href="{% url 'subprofile' user.username %}" class="item--profile sidebar__item-link {{active_subproile}}">
+                <a href="{% url 'subprofile' user.username %}" class="item--profile sidebar__item-link {{active_subprofile}}">
                 {% endif %}
-                    <img src="../../../media/{{profile.image}}" alt="profile-img">
+                    <img src="{{profile.image.url}}" alt="profile-img">
                     <span id="username" class="profile-option">{{profile.user.username}}</span>
                 </a>
             </li>
