--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -24,7 +24,7 @@
                 <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0">
                 <input onclick="window.location.href='/manage_subusers';" type="submit" value="filter_alt" class="filter-bar__type material-symbols-outlined col-md-1 col-3">
                 <div class="filter-bar__name col-md-4 col-8">
-                    <input type="text">
+                    <input type="text" class="filter-bar__search">
                     <input value="search" type="submit" class="material-symbols-outlined">
                 </div>
                 <div class="filter-bar__logo-container col-md-5 col-0">
@@ -80,7 +80,7 @@
             <form method="POST" id="{{form.instance.id}}_form" class="group-info"> 
                 {%csrf_token%}
                 <input type="number" value="{{form.instance.id}}" hidden name="id">
-                <div class="group-name__container">
+                <div class="group-name__container username__container">
                     <label for="id_name">Nombre:</label>
                     {{form.name}}
                 </div>
