Add sorting functionality to groups and improve filter button accessibility

--- a/templates/Users/subprofiles_group.html
+++ b/templates/Users/subprofiles_group.html
@@ -20,11 +20,11 @@
     <main>
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
-                <input type="submit" value="sort" class="filter-bar__a-z material-symbols-outlined col-md-1 col-0">
-                <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0">
-                <input onclick="window.location.href='/manage_subusers';" type="submit" value="filter_alt" class="filter-bar__type material-symbols-outlined col-md-1 col-3">
+                <input type="submit" value="sort" class="filter-bar__a-z material-symbols-outlined col-md-1 col-0" title="Ordenar a-z">
+                <input type="submit" value="sort" class="filter-bar__z-a material-symbols-outlined col-md-1 col-0" title="Ordenar z-a">
+                <input onclick="window.location.href='/manage_subusers';" type="submit" value="manage_accounts" class="filter-bar__type material-symbols-outlined col-md-1 col-3" title="Gestionar Subusuarios">
                 <div class="filter-bar__name col-md-4 col-8">
-                    <input type="text" class="filter-bar__search">
+                    <input type="text" class="filter-bar__search" placeholder="Buscar por nombre">
                     <input value="search" type="submit" class="material-symbols-outlined">
                 </div>
                 <div class="filter-bar__logo-container col-md-5 col-0">
