--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -11,13 +11,13 @@
             <li class="sidebar__tools">
                 <p>Herramientas<span class="material-symbols-outlined">build</span></p>
                 <div class="sidebar__item">
-                    <a href="#" class="sidebar__item-link">
+                    <label for="create-object" class="sidebar__item-link create-object-label">
                         <span class="material-symbols-outlined">add</span>
                         <p>Crear Objeto</p>
-                    </a> 
+                    </label>
                 </div> 
                 <div class="sidebar__item">
-                    <label for="create-group" class="sidebar__item-link">
+                    <label for="create-group" class="sidebar__item-link create-group-label">
                         <span class="material-symbols-outlined">add</span>
                         <p>Crear Grupo</p>
                     </label>
