--- a/static/CSS/Objects/mainStyles.css
+++ b/static/CSS/Objects/mainStyles.css
@@ -126,10 +126,227 @@ aside:has(input[type="checkbox"]:checked) ~ main {
 }
 
 .objects-area {
+    display: grid;
     width: 100%;
     height: calc(100dvh - (2rem + 44.78px));
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows : repeat(4,1fr);
+    gap: 15px;
+    padding: 15px;
 } 
 
+.object-card {
+    background-color: var(--sidebar-color);
+    border-radius: 15px;
+    box-shadow: 0 4px 8px #0002;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    cursor: pointer;
+    height: 80%;
+    padding: 0;
+}
+
+.object-card__image-container {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.object-card__image-container > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px 0 0 15px;
+}
+
+.object-card__info-container{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.bold {
+    font-weight: bold;
+}
+/* FORMS STYLES */
+
+.close-formObject, .close-formGroup {
+    position: absolute;
+    top: calc(calc(2rem + 44.78px) + 10px);
+    margin-left: 15px;
+    color: #fff;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    cursor: pointer;
+    transition: filter .3s;
+}
+
+.close-formObject:hover, .close-formGroup:hover {
+    filter: drop-shadow(0 0 5px #fff);
+}
+
+.create-object, .create-group{
+    display: none;
+}
+
+#create-object:checked ~ .create-object, #create-group:checked ~ .create-group {
+    display: flex;
+}
+
+.objects-link__container{
+    position: absolute;
+}
+
+.forms-container form {
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 82.5dvh;
+    width: 50%;
+    padding: 0 40px;
+    border-radius: 20px;
+    margin: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 50dvh) / 2) 25%;
+    margin-top: calc(calc(calc(100dvh - calc(2rem + 44.78px)) - 82.5dvh) / 2);
+    background-color: var(--sidebar-color);
+}
+
+.forms-container input[type="submit"], .forms-container input[type="button"] {
+    background-color: var(--fb-color);
+    color: #fff;
+    padding: 7px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-family: inherit;
+    font-weight: 600;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: box-shadow .3s;
+    outline: none;
+}
+
+.forms-container input[type="submit"]:hover, .forms-container input[type="button"]:hover {
+    box-shadow: 7px 7px 0px rgb(100, 166, 231),
+                -7px -7px 0px #335a94;
+}
+
+.forms-container form input, form select, textarea {
+    background-color: #eee;
+    border: none;
+    padding: 10px 15px;
+    font-size: 13px;
+    font-family: inherit;
+    border-radius: 8px;
+    width: 100%;
+    outline: none;
+}
+
+form select {
+    cursor: pointer;
+}
+
+textarea {
+    height: 20dvh;
+    resize: none;
+}
+
+.forms-container form.create-object div:has(input[type="file"]) {
+    width: 45%;
+}
+
+.forms-container form.create-object div:has(select) {
+    width: 45%;
+    margin-right: 10%;
+}
+
+.forms-container form input:focus, form select:focus, textarea:focus {
+    outline: var(--wood) 1px solid;
+}
+
+.forms-container form a {
+    color: #333;
+    text-decoration: none;
+    margin-top: 45px;
+    font-size: .9rem;
+}
+
+.forms-container form a:hover {
+    text-decoration: underline;
+}
+
+.forms-container form > div, .forms-container form > button {
+    width: 100%;
+}
+
+.errorlist {
+    list-style: none;
+}
+
+.errorlist li {
+    color: #e24;
+    font-size: .9rem;
+}
+
+dialog {
+    border: none;
+    border-radius: 20px;
+    padding: 25px 40px;
+}
+
+dialog label.material-symbols-outlined {
+    position: absolute;
+    top: 5px;
+    right: 7px;
+    color: var(--fb-color);
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem; 
+    cursor: pointer;
+}
+
+dialog p {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+}
+
+dialog div {
+    display: flex;
+    gap: 15px;
+}
+
+dialog button {
+    background-color: var(--fb-color);
+    color: #fff;
+    width: 50px;
+    padding-top: 3.5px;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    font-family: inherit;
+    text-transform: uppercase;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color .2s, color .2s, font-weight .2s, outline .2s; 
+}
+
+dialog button:hover {
+    outline: var(--wood) 1px solid;
+    color: var(--fb-color);
+    background-color: var(--bg-color);
+    font-weight: 600;
+    box-shadow: var(--wood) 0 0 5px;
+}
+
+
+
+
+/* MESSAGES STYLES */
 .hidden {
     display: none;
 }
