--- a/templates/Objects/log.html
+++ b/templates/Objects/log.html
@@ -26,7 +26,7 @@
                 <div class="material-symbols-outlined col-md-1 col-3"><label for="subusersgroupsLog" id="subusersgroupsLog-label">groups</label></div>
                 {% endif %}
                 <div class="material-symbols-outlined col-md-1 col-3"><label id="objectsLog-label">view_object_track</label></div>
-                <div class="material-symbols-outlined col-md-1 col-3"><label id="objectgroupsLog-label">view_object_track</label></div>
+                <div class="material-symbols-outlined col-md-1 col-3"><label id="objectgroupsLog-label">stack</label></div>
                 <div class="filter-bar__logo-container col-md-8 col-0">
                     <img src="{%static '/IMAGES/logo_transparente_blanco.webp'%}" alt="logo" class="logo">
                 </div>
