--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -18,7 +18,7 @@
                 </div> 
                 <div class="sidebar__item">
                     <label for="create-group" class="sidebar__item-link create-group-label">
-                        <span class="material-symbols-outlined">add</span>
+                        <span class="material-symbols-outlined">note_stack_add</span>
                         <p>Crear Grupo</p>
                     </label>
                 </div>  
